# RAGFast

./: .gitignore  README.md  init_setup.sh  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi-publish.yml
src/RAGFast/: RAGFAST.py  __init__.py
