# metadata about the project

[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
    langchain==0.1.17
    openai==1.23.6
    tiktoken==0.6.0
    rapidocr-onnxruntime==1.3.22
    requests==2.31.0
    langchain-community==0.0.36
    langchain_openai==0.1.5
    faiss-cpu==1.8.0
    pypdf==4.2.0
    chromadb==0.5.0
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
linkrender = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py